hphp/hack/test/typecheck/tuple_rvalue_only.php.exp
File "tuple_rvalue_only.php", line 5, characters 3-15:
Tuple cannot be used as an lvalue. Maybe you meant list? (Parsing[1002])
File "tuple_rvalue_only.php", line 5, characters 3-15:
tuple_expression is not allowed in write context (Parsing[1002])
File "tuple_rvalue_only.php", line 5, characters 3-27:
Invalid assignment (Typing[4110])
  File "tuple_rvalue_only.php", line 5, characters 3-15:
  Expected `(_, _)`
  File "tuple_rvalue_only.php", line 5, characters 19-27:
  But got `vec<int>`
